[의사들]글씨추가 테스트1

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -443,7 +443,7 @@ body, #headerwarp {
 
 .item1 .doctor-cir {
   position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/background1.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
   width: 400px; /* 기본 크기 */
   height: 450px; /* 기본 크기 */
   margin: 0 15px;
@@ -462,12 +462,12 @@ body, #headerwarp {
   transform: translateY(-50%);
   width: 100px;
   height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/overlay1.jpg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay1.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
 }
 
 .item2 .doctor-cir {
   position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/background2.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
   width: 400px; /* 기본 크기 */
   height: 450px; /* 기본 크기 */
   margin: 0 15px;
@@ -486,12 +486,12 @@ body, #headerwarp {
   transform: translateY(-50%);
   width: 100px;
   height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/overlay2.jpg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay2.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
 }
 
 .item3 .doctor-cir {
   position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/background3.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
   width: 400px; /* 기본 크기 */
   height: 450px; /* 기본 크기 */
   margin: 0 15px;
@@ -510,12 +510,12 @@ body, #headerwarp {
   transform: translateY(-50%);
   width: 100px;
   height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/overlay3.jpg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay3.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
 }
 
 .item4 .doctor-cir {
   position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/background4.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
   width: 400px; /* 기본 크기 */
   height: 450px; /* 기본 크기 */
   margin: 0 15px;
@@ -534,12 +534,12 @@ body, #headerwarp {
   transform: translateY(-50%);
   width: 100px;
   height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/overlay4.jpg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay4.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
 }
 
 .item5 .doctor-cir {
   position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/background5.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
   width: 400px; /* 기본 크기 */
   height: 450px; /* 기본 크기 */
   margin: 0 15px;
@@ -558,12 +558,12 @@ body, #headerwarp {
   transform: translateY(-50%);
   width: 100px;
   height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/overlay5.jpg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay5.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
 }
 
 .item6 .doctor-cir {
   position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/background6.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
   width: 400px; /* 기본 크기 */
   height: 450px; /* 기본 크기 */
   margin: 0 15px;
@@ -582,12 +582,12 @@ body, #headerwarp {
   transform: translateY(-50%);
   width: 100px;
   height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/overlay6.jpg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay6.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
 }
 
 .item7 .doctor-cir {
   position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/background7.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
   width: 400px; /* 기본 크기 */
   height: 450px; /* 기본 크기 */
   margin: 0 15px;
@@ -606,7 +606,7 @@ body, #headerwarp {
   transform: translateY(-50%);
   width: 100px;
   height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/overlay7.jpg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay7.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
 }
 
 .doctor-cir,
