--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -408,7 +408,7 @@ body, #headerwarp {
   overflow: visible;
 }
 
-.doctor-item {
+#green19_78758 .doctor-item {
   float: left;
   width: calc(20% - 20px);
   margin: 0 -55px;
@@ -417,8 +417,13 @@ body, #headerwarp {
 .doctor-cir {
   position: relative;
   margin: 0 auto;
-  width: 500px; /* Increased size */
-  height: 550px; /* Increased size */
+  width: 400px;
+  height: 450px;
+  transition: all 0.4s ease-in-out;
+  margin: 0 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .doctor-cir .inner {
@@ -431,182 +436,53 @@ body, #headerwarp {
 }
 
 .doctor-cir .img {
+  width: 300px;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+}
+
+.text-img {
   position: absolute;
-  top: 0;
   right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  width: 500px; /* Increased size */
-  height: 500px; /* Increased size */
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.6); /* 배경색 */
+  color: white;
+  padding: 10px 15px;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 8px;
+  white-space: nowrap;
 }
 
-.item1 .doctor-cir {
-  position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
-  width: 400px; /* 기본 크기 */
-  height: 450px; /* 기본 크기 */
-  margin: 0 15px;
-  transition: all 0.4s ease-in-out;
-}
-.item1 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg") center/cover no-repeat; /* 각 아이템의 메인 이미지 */
-  width: 300px; /* 메인 이미지 크기 */
-  height: 100%; /* 부모 높이에 맞춤 */
-  position: relative;
-}
-.item1 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay1.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+.item01 .doctor-cir .img {
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg") center/cover no-repeat;
 }
 
-.item2 .doctor-cir {
-  position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
-  width: 400px; /* 기본 크기 */
-  height: 450px; /* 기본 크기 */
-  margin: 0 15px;
-  transition: all 0.4s ease-in-out;
-}
-.item2 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg") center/cover no-repeat; /* 각 아이템의 메인 이미지 */
-  width: 300px; /* 메인 이미지 크기 */
-  height: 100%; /* 부모 높이에 맞춤 */
-  position: relative;
-}
-.item2 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay2.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+.item02 .doctor-cir .img {
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg") center/cover no-repeat;
 }
 
-.item3 .doctor-cir {
-  position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
-  width: 400px; /* 기본 크기 */
-  height: 450px; /* 기본 크기 */
-  margin: 0 15px;
-  transition: all 0.4s ease-in-out;
-}
-.item3 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg") center/cover no-repeat; /* 각 아이템의 메인 이미지 */
-  width: 300px; /* 메인 이미지 크기 */
-  height: 100%; /* 부모 높이에 맞춤 */
-  position: relative;
-}
-.item3 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay3.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+.item03 .doctor-cir .img {
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg") center/cover no-repeat;
 }
 
-.item4 .doctor-cir {
-  position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
-  width: 400px; /* 기본 크기 */
-  height: 450px; /* 기본 크기 */
-  margin: 0 15px;
-  transition: all 0.4s ease-in-out;
-}
-.item4 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.jpg") center/cover no-repeat; /* 각 아이템의 메인 이미지 */
-  width: 300px; /* 메인 이미지 크기 */
-  height: 100%; /* 부모 높이에 맞춤 */
-  position: relative;
-}
-.item4 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay4.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+.item04 .doctor-cir .img {
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.png") center/cover no-repeat;
 }
 
-.item5 .doctor-cir {
-  position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
-  width: 400px; /* 기본 크기 */
-  height: 450px; /* 기본 크기 */
-  margin: 0 15px;
-  transition: all 0.4s ease-in-out;
-}
-.item5 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg") center/cover no-repeat; /* 각 아이템의 메인 이미지 */
-  width: 300px; /* 메인 이미지 크기 */
-  height: 100%; /* 부모 높이에 맞춤 */
-  position: relative;
-}
-.item5 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay5.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+.item05 .doctor-cir .img {
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg") center/cover no-repeat;
 }
 
-.item6 .doctor-cir {
-  position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
-  width: 400px; /* 기본 크기 */
-  height: 450px; /* 기본 크기 */
-  margin: 0 15px;
-  transition: all 0.4s ease-in-out;
-}
-.item6 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg") center/cover no-repeat; /* 각 아이템의 메인 이미지 */
-  width: 300px; /* 메인 이미지 크기 */
-  height: 100%; /* 부모 높이에 맞춤 */
-  position: relative;
-}
-.item6 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay6.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+.item06 .doctor-cir .img {
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg") center/cover no-repeat;
 }
 
-.item7 .doctor-cir {
-  position: relative;
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat; /* 각 아이템의 배경 이미지 */
-  width: 400px; /* 기본 크기 */
-  height: 450px; /* 기본 크기 */
-  margin: 0 15px;
-  transition: all 0.4s ease-in-out;
-}
-.item7 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat; /* 각 아이템의 메인 이미지 */
-  width: 300px; /* 메인 이미지 크기 */
-  height: 100%; /* 부모 높이에 맞춤 */
-  position: relative;
-}
-.item7 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background: url("https://juhyun88.github.io/iweb_src/docto/의사설명김우태/overlay7.pg") center/cover no-repeat; /* 각 아이템의 오버레이 이미지 */
+.item07 .doctor-cir .img {
+  background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat;
 }
 
 .doctor-cir,
@@ -656,197 +532,50 @@ button.slick-prev, button.slick-next {
   height: 100%; /* 이미지를 부모 크기에 맞게 설정 */
 }
 
-.slick-current .doctor-item.item1 .doctor-cir {
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/background1.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-}
 .slick-current .doctor-item.item1 .doctor-cir .img {
   background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 300px;
-  height: 100%;
-}
-.slick-current .doctor-item.item1 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/overlay1.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item2 .doctor-cir {
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/background2.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-}
 .slick-current .doctor-item.item2 .doctor-cir .img {
   background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 300px;
-  height: 100%;
-}
-.slick-current .doctor-item.item2 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/overlay2.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item3 .doctor-cir {
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/background3.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-}
 .slick-current .doctor-item.item3 .doctor-cir .img {
   background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 300px;
-  height: 100%;
-}
-.slick-current .doctor-item.item3 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/overlay3.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item4 .doctor-cir {
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/background4.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-}
 .slick-current .doctor-item.item4 .doctor-cir .img {
   background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 300px;
-  height: 100%;
-}
-.slick-current .doctor-item.item4 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/overlay4.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item5 .doctor-cir {
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/background5.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-}
 .slick-current .doctor-item.item5 .doctor-cir .img {
   background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 300px;
-  height: 100%;
-}
-.slick-current .doctor-item.item5 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/overlay5.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item6 .doctor-cir {
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/background6.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-}
 .slick-current .doctor-item.item6 .doctor-cir .img {
   background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 300px;
-  height: 100%;
-}
-.slick-current .doctor-item.item6 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/overlay6.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item7 .doctor-cir {
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/background7.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-}
 .slick-current .doctor-item.item7 .doctor-cir .img {
   background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 300px;
-  height: 100%;
-}
-.slick-current .doctor-item.item7 .doctor-cir .overlay-img {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  width: 100px;
-  height: 100px;
-  background-image: url("https://juhyun88.github.io/iweb_src/doctor/overlay7.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
