--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -388,10 +388,6 @@ body, #headerwarp {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-.doctor-area {
-  padding: 0 5.6%;
-}
-
 .doctor-list-pc {
   display: block;
 }
@@ -864,6 +860,10 @@ button.slick-prev, button.slick-next {
 
 .slick-slide .slick-active {
   width: auto !important;
+}
+
+.slick-slide img {
+  width: 200px;
 }
 
 #green19_82309 .quick-bottom .quick-btn img {
