--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -15,6 +15,8 @@ body, #headerwarp{
         display: none !important;
     }
 }
+#green19_81348{
+    margin-top:-20px !important;}
 
 .active-hover{
     background-color: var(--light-blue, #dbebf6)!important;
@@ -26,7 +28,7 @@ body, #headerwarp{
        margin: 0px 0px !important;
         > ul{
             &:after{
-                content: "";
+                // content: "";
                 position: absolute;
                 top: 100%;
                 left: 0;    
@@ -127,6 +129,7 @@ body, #headerwarp{
         }
       }
 }
+
 
 #headerwarp .cssmenu{
     justify-content: end !important;
