--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -1,5 +1,5 @@
 body, #headerwarp{
-    min-width: 1500px !important;
+    min-width: 1920px !important;
 }
 #green19_80662{
     display: flex !important;
@@ -81,17 +81,19 @@ body, #headerwarp{
                     display: block !important;
                     font-size: 15px !important;
                     background-color: transparent !important;
-                    font-family: "Paperlogy 3 Light";
+                    font-family: "Paperlogy";
+                    font-weight: 300 !important;
                     padding:8px 0px !important;
                 }
             }
          > li {
             //대메뉴 li
-            padding: 0 20px !important;
+            padding: 0px !important;
             > a{
                 //대메뉴
-              font-family: "Paperlogy 6 SemiBold" !important;
-              padding: 0px 15px !important;
+              font-family: "Paperlogy" !important;
+              font-weight: 600 !important;
+              padding: 0px 30px !important;
               
               &.active{
                 &:after {
@@ -125,7 +127,8 @@ body, #headerwarp{
       #gNaviNum0{
         a {
             color: #F17522 !important;
-            font-family: 'Paperlogy-8ExtraBold'!important;
+            font-family: 'Paperlogy'!important;
+            font-weight: 800 !important;
         }
       }
 }
