--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -2,6 +2,7 @@ body, #headerwarp{
     min-width: 1920px !important;
 }
 #headerwarp{
+    background-color: white;
     .header_box{
           background-color: transparent !important;
     }
