소메뉴 글자 개행처리막기

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -78,6 +78,7 @@ body, #headerwarp {
   position: absolute;
   left: 0px;
   top: 90px;
+  white-space: nowrap;
 }
 #gNavi.gNavi > ul ul li {
   display: block !important;
