--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -86,6 +86,7 @@ body, #headerwarp{
                 position: absolute;
                 left: 0px;
                 top: 90px;
+                white-space: nowrap;
 
                 li{
                     display: block !important;
@@ -94,6 +95,7 @@ body, #headerwarp{
                     font-family: "Paperlogy";
                     font-weight: 300 !important;
                     padding:8px 0px !important;
+
                 }
             }
          > li {
